2018-05-28  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Now also checks for OpenMP (for MLPACK 3.0.*)
	* configire: Idem
	* src/Makevars: Use $(SHLIB_OPENMP_CXXFLAGS) if available

	* src/LARS.cpp (LARS): Predict() now wants a rowvector
	* src/linearRegression.cpp (linearRegression): Idem

2018-02-18  Dirk Eddelbuettel  <edd@debian.org>

	* data/lars.RData: New data set from MLPACK
	* rawdata/lars_dependent_x.csv: X data, limited rank matrix
	* rawdata/lars_dependent_y.csv: Y colum
	* rawdata/lars_data.r: Processing
	* R/data.R: Documentation
	* man/lars_dependent_x.Rd: Idem
	* man/lars_dependent_y.Rd: Idem

2018-02-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/LARS.cpp (LARS): Change interface to have training set as
	optional last parameter; retun list with several result elements

2018-02-10  Dirk Eddelbuettel  <edd@debian.org>

	* src/LARS.cpp: Completed roxygen docs of variables, added simple
	example
	* man/LARS.Rd: Idem

	* inst/include/RcppMLPACK.h: Define ARMA_COUT_STREAM and
	ARMA_CERR_STREAM instead of the deprecated ARMA_DEFAULT_OSTREAM

	* src/init.c: Removed, now auto-generated in RcppExports.cpp
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem

2017-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/init.c (R_init_RcppMLPACK): all R_registerRoutines()
	and R_useDynamicSymbols()
	* NAMESPACE: Use .registration=TRUE on useDynLib

	* src/linearRegression.cpp (linearRegression): New (and very
	simple) OLS (and Ridge) example function
	* man/man/linearRegression.Rd: Documentation

2017-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/LARS.cpp (LARS): Beginnings of LARS function
	* man/LARS.Rd: Beginnings of documentation

	* .editorconfig: Added to support EditorConfig

2017-04-01  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated

2017-03-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/kmeans.cpp: Added documentation and example
	* man/kmeans.Rd: Ditto

2017-02-27  Dirk Eddelbuettel  <edd@debian.org>
